# hdmi-multiviewer-proxy

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  hdmi-multiviewer-proxy-0.1.1.tgz  hdmi-multiviewer-proxy-0.1.2.tgz  index.yaml  pyproject.toml  requirements.txt
.github/: SETUP.md
.github/workflows/: build-main.yml  ci.yml  release.yml
app/: __init__.py  commands.py  config.py  dependencies.py  main.py  models.py  serial_handler.py
app/routers/: audio.py  display.py  health.py  output.py  system.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
docs/: commands.md  home-assistant.md  openapi.json
scripts/: bump_version.py  generate_openapi.py
tests/: __init__.py  test_api.py  test_commands.py
